--- a/工作日志.md
+++ b/工作日志.md
@@ -270,3 +270,6 @@ right sidebar问题：
 * ascii表格里面0x08是bs（backspace)退格
 
 ## 17. 段落快捷操作
+
+* 有猜测就要有验证. 图片svg背景色一直是白色，猜测是设计给图问题，然后就去设置一个背景色给他去验证
+* render_component不能依赖workbench，因为workbench很大加载的时机会很晚。
