--- a/设计模式.md
+++ b/设计模式.md
@@ -2,9 +2,10 @@
 
 ## class diagrams
 
-![](./Image/Design_Patterns/class1.png)
-![](./Image/Design_Patterns/class2.png)
-```
+![1](./Image/Design_Patterns/class1.png)
+![2](./Image/Design_Patterns/class2.png)
+
+```text
 visibility：
     + public
     - private
@@ -13,12 +14,14 @@ visibility：
 ```
 
 ## relationship
-```
+
+```text
 inheritance: object to object, class to class.
 Aggregation： a part can exist outside the whole
 Composition： a part cannot exist outside the whole
 Multiplicity: one of composition, which could show diagram with number
 ```
+
 Inheritance:
 ![Inheritance](./Image/Design_Patterns/relationship2.png)
 ![Inheritance](./Image/Design_Patterns/relationship1.png)
