--- a/3_CSS相关/盒子模型.md
+++ b/3_CSS相关/盒子模型.md
@@ -1,37 +1,27 @@
-[toc]
-
-## 继承
-
-为一个元素设计样式，同时其后代元素会继承。
-```
-<p>
-    <span>对p进行样式设置，span会继承</span>
-</p>
-```
-但是，有些样式不能被继承：背景相关，布局相关等
 
 ## Box Model (盒子模型) -- 块元素
+
 摆放一个元素的位置，放在上面下面或者中间，此时得知道该元素的大小形状。CSS将页面内所有元素都设置为一个矩形的盒子
 
 盒子(电视包装盒)组成：
- 
-    * content（电视）
-    * border 盒子边界（纸盒子板子）
-    * padding 内边距 （泡沫）
-    * margin 外边距 （盒子外部，盒子与盒子之间的泡沫）， 定义两个不同盒子之间的距离
 
-![1](./Image/CSS/box1.jpeg)
+* content（电视）
+* border 盒子边界（纸盒子板子）
+* padding 内边距 （泡沫）
+* margin 外边距 （盒子外部，盒子与盒子之间的泡沫）， 定义两个不同盒子之间的距离
 
-### box默认：
+![1](../Image/CSS/box1.jpeg)
 
-    * 默认高度： 100%， 
-    * 默认宽度： 被`content`撑开
-    * 内容区范围： 该元素所有的子元素和文本内容
-    * width和height设置的不是整个盒子大小，而是内容区大小
-    * 盒子的可见框大小是由 content大小 + board大小 + pading大小 共同决定的
-    * 元素分为行内元素和块元素，盒子模型为块元素，独占一行
+### box默认
 
-### border：
+* 默认高度： 100%
+* 默认宽度： 被`content`撑开
+* 内容区范围： 该元素所有的子元素和文本内容
+* width和height设置的不是整个盒子大小，而是内容区大小
+* 盒子的可见框大小是由 content大小 + board大小 + pading大小 共同决定的
+* 元素分为行内元素和块元素，盒子模型为块元素，独占一行
+
+### border
 
 * 边框里面属于盒子内部，边框外面属于盒子外部
 * 设置边框，至少三个样式：
@@ -75,14 +65,14 @@
     margin-bottom - 下外边距，设置一个正值，其下边的元素会向下移动
     margin-left - 左外边距，设置一个正值，元素会向右移动
 
-![](./Image/CSS/margin.png)
+![](../Image/CSS/margin.png)
 
 ### 水平布局
 
-![2](./Image/CSS/shuipingbuju.png)
-![3](./Image/CSS/shuipingbuju2.png)
+![2](../Image/CSS/shuipingbuju.png)
+![3](../Image/CSS/shuipingbuju2.png)
 
-```
+```text
 元素的水平方向的布局：
     元素在其父元素中水平方向的位置由以下几个属性共同决定“
         margin-left 默认为 0
@@ -118,13 +108,13 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
             margin:0 auto;
 ```
 
-![shuipingbuju3](./Image/CSS/shuipingbuju3.png)
-![shuipingbuju3](./Image/CSS/shuipingbuju4.png)
+![shuipingbuju3](../Image/CSS/shuipingbuju3.png)
+![shuipingbuju3](../Image/CSS/shuipingbuju4.png)
 
 ——————————————
 
-![shuipingbuju3](./Image/CSS/shuipingbuju5.png)
-![shuipingbuju3](./Image/CSS/shuipingbuju6.png)
+![shuipingbuju3](../Image/CSS/shuipingbuju5.png)
+![shuipingbuju3](../Image/CSS/shuipingbuju6.png)
 
 ### 垂直布局
 
@@ -139,18 +129,18 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
   * 两个相邻元素处于垂直方向（相邻，垂直），他们的外边距会重叠。例如一个设置margin-bottom = 100px，一个设置margin-top = 100px他们会重叠为100px
   * 兄弟元素之间的相邻垂直外边距会取两者之间的较大值（都是正值）。如果都是负值，取绝对值较大的
   * 父子元素
-    - 父子元素间相邻外边距，子元素的会传递给父元素（上外边距）
-    - 父子外边距的折叠会影响到页面的布局，必须要进行处理
+    * 父子元素间相邻外边距，子元素的会传递给父元素（上外边距）
+    * 父子外边距的折叠会影响到页面的布局，必须要进行处理
 
 ## 行内元素
 
-- 定义： a, br, b, span等元素， 元素分为行内元素和块元素，盒子模型为块元素，独占一行， 行内元素不独占一行
-- 行内元素会在一条直线上排列，在同一行从左至右水平排列。直到一行排不下，才会换行
-- 行内元素设置宽、高、margin上下、padding上下无效（竖直无效）
-- 行内元素设置line-height，margin左右、padding左右有效（水平有效）
-- 行内元素不支持设置宽度和高度, height 和 width无效， 行内元素的宽高随标签里的内容而变化
+* 定义： a, br, b, span等元素， 元素分为行内元素和块元素，盒子模型为块元素，独占一行， 行内元素不独占一行
+* 行内元素会在一条直线上排列，在同一行从左至右水平排列。直到一行排不下，才会换行
+* 行内元素设置宽、高、margin上下、padding上下无效（竖直无效）
+* 行内元素设置line-height，margin左右、padding左右有效（水平有效）
+* 行内元素不支持设置宽度和高度, height 和 width无效， 行内元素的宽高随标签里的内容而变化
 例如下图，给a超链接设置长款无用
-- 要想设置宽高只能把行内元素变为块元素，用到`display`
+* 要想设置宽高只能把行内元素变为块元素，用到`display`
     inline 将元素设置为行内元素
     block 将元素设置为块元素
     inline-block 将元素设置为行内块元素。行内块元素：既可以设置宽度和高度又不会独占一行
@@ -161,14 +151,14 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
     visible 默认值，元素在页面中正常显示
     hidden 元素在页面中隐藏 不显示，和display = none的区别为：hidden隐藏，但是依然占据位置， none是不占显示时候的位置
 
-![2](./Image/CSS/hangneiyuansu1.png)
-![3](./Image/CSS/hangneiyuansu2.png)
+![2](../Image/CSS/hangneiyuansu1.png)
+![3](../Image/CSS/hangneiyuansu2.png)
 
 ## 默认样式
 
-- 通常情况，浏览器都会为元素设置一些默认样式
-- 默认样式的存在会影响到页面的布局，通常情况下编写网页时必须要去除浏览器的默认样式（PC端的页面）
-- 通常去除默认的margin, padding:
+* 通常情况，浏览器都会为元素设置一些默认样式
+* 默认样式的存在会影响到页面的布局，通常情况下编写网页时必须要去除浏览器的默认样式（PC端的页面）
+* 通常去除默认的margin, padding:
 * {
     padding: 0;
     margin: 0;
@@ -178,11 +168,11 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
 
 div默认为block，每一个单独占一行； span的默认样式为inline
 
-![1](./Image/CSS/1.png)
+![1](../Image/CSS/1.png)
 
-![2](./Image/CSS/2.png)
+![2](../Image/CSS/2.png)
 
-![3](./Image/CSS/3.png)
+![3](../Image/CSS/3.png)
 
 ## [CSS居中的几种方式](https://segmentfault.com/a/1190000013966650)
 
@@ -207,32 +197,3 @@ div默认为block，每一个单独占一行； span的默认样式为inline
   6、浮动元素不会超过它上边的浮动的兄弟元素，最多最多就是和它一样高
 
 简单总结：浮动目前来讲它的主要作用就是让页面中的元素可以水平排列，通过浮动可以制作一些水平方向的布局
-
-## flex弹性盒子
-
-定义：是CSS中的又一种布局手段，它主要用来代替浮动来完成页面的布局； flex可以使元素具有弹性，让元素可以跟随页面的大小的改变而改变。
-
-样式分为两类，一个是给弹性容器设置的，一个是给弹性元素设置的
-
-### 弹性容器
-
-要使用弹性盒，必须先将一个元素设置为弹性容器
-我们通过 display 来设置弹性容器
-display:flex  设置为块级弹性容器，该设置元素自己独占一行
-display:inline-flex 设置为行内的弹性容器，该设置元素自己不独占一行，后面的元素会和他同一行后面
-
-### 弹性元素
-
-弹性容器的直接子元素自动变成弹性元素（弹性项）; ul如果是弹性容器，li是弹性元素，div不是弹性元素
-
-```html
-  <ul>
-    <li>
-      <div></div>
-    </li>
-  </ul>
-```
-
-弹性元素可以同时是弹性容器；例如上面可以给li设置flex，这时候li就是弹性容器，又是ul的弹性元素
-
-
