--- a/6_设计模式/设计模式.md
+++ b/6_设计模式/设计模式.md
@@ -2,8 +2,8 @@
 
 ## class diagrams
 
-![1](./Image/Design_Patterns/class1.png)
-![2](./Image/Design_Patterns/class2.png)
+![1](../Image/Design_Patterns/class1.png)
+![2](../Image/Design_Patterns/class2.png)
 
 ```text
 visibility：
@@ -23,17 +23,16 @@ Multiplicity: one of composition, which could show diagram with number
 ```
 
 Inheritance:
-![Inheritance](./Image/Design_Patterns/relationship2.png)
-![Inheritance](./Image/Design_Patterns/relationship1.png)
+![Inheritance](../Image/Design_Patterns/relationship2.png)
+![Inheritance](../Image/Design_Patterns/relationship1.png)
 
 Aggregation:
-![Aggregation](./Image/Design_Patterns/relationship3.png)
+![Aggregation](../Image/Design_Patterns/relationship3.png)
 a `Tortoise` is a part of `Creep`, but  it also could leave the `Creep` at any point and still exist on its own
 
 Composition:
-![Composition](./Image/Design_Patterns/relationship4.png)
+![Composition](../Image/Design_Patterns/relationship4.png)
 
 Multiplicity:
-![Multiplicity](./Image/Design_Patterns/relationship5.png)
-![Multiplicity](./Image/Design_Patterns/relationship6.png)
-
+![Multiplicity](../Image/Design_Patterns/relationship5.png)
+![Multiplicity](../Image/Design_Patterns/relationship6.png)
