--- a/1_javascript/闭包.md
+++ b/1_javascript/闭包.md
@@ -63,7 +63,6 @@ function(){
 
 那么在其他的 JS 文件，就不能直接修改这个变量的值，但是可以使用 `window.奖励一条命()` 来涨命，使用 `window.死一条命()` 来让角色掉一条命。
 
-## 你根本不需要知道闭包这个概念，一样可以使用闭包！
+## 你根本不需要知道闭包这个概念，一样可以使用闭包
 
 闭包是 JS 函数作用域的副产品。换句话说，正是由于 JS 的函数内部可以使用函数外部的变量，所以这段代码正好符合了闭包的定义。而不是 JS 故意要使用闭包。很多编程语言也支持闭包，另外有一些语言则不支持闭包。只要你懂了 JS 的作用域，你自然而然就懂了闭包，即使你不知道那就是闭包！
-
