--- a/1_javascript/一口气了解this,prototype,constructor/2.详解“this”及相关函数.md
+++ b/1_javascript/一口气了解this,prototype,constructor/2.详解“this”及相关函数.md
@@ -45,7 +45,7 @@ obj2.bike();      // "Gixxer"
 如果有一个object，其property是一个函数则该object就是函数的context。函数的`this`指这个object。这是‘implicit binding'隐式绑定
 
 ```javascript
-ar obj1 = {
+var obj1 = {
   name: "Pulsar",
   bike: function() {
     console.log(this.name);
@@ -123,12 +123,12 @@ console.log(p);  // Point{x:2,y:3}
 
 若直接调用Point函数，会是怎样一种情况，直接调用的话this指的是谁？
 
-![2](../Image/javascript/2.png)
+![2](../../Image/javascript/2.png)
 
 补充说明：
-![3](../Image/javascript/3.png)
+![3](../../Image/javascript/3.png)
 
-![4](../Image/javascript/4.png)
+![4](../../Image/javascript/4.png)
 
 ## this捆绑的优先级
 
