--- a/1_javascript/垃圾回收.md
+++ b/1_javascript/垃圾回收.md
@@ -10,8 +10,7 @@ The first step in the process is called marking. This is where the garbage colle
 
 ### step 2: Normal Deletion
 
-Normal deletion removes unreferenced objects leaving referenced objects and pointers to free space.
-
+Normal deletion removes unreferenced objects leaving refer
 The memory allocator holds references to blocks of free space where new object can be allocated.
 
 ![9](../Image/javascript/9.png)
