--- a/2_React/组件的组合关系.md
+++ b/2_React/组件的组合关系.md
@@ -61,4 +61,5 @@ function WelcomeDialog() {
 
 ## reference
 
-[react document](https://reactjs.org/docs/composition-vs-inheritance.html)
+[react document - composition VS inheritance](https://reactjs.org/docs/composition-vs-inheritance.html)
+[Pass Multiple Children to a React Component with Slots](https://daveceddia.com/pluggable-slots-in-react-components/)
