--- a/零碎知识点/跨域问题.md
+++ b/零碎知识点/跨域问题.md
@@ -23,6 +23,53 @@
 
 ### 没有同源策略限制的Dom查询
 
+1.有一天你刚睡醒，收到一封邮件，说是你的银行账号有风险，赶紧点进www.yinghang.com改密码。你吓尿了，赶紧点进去，还是熟悉的银行登录界面，你果断输入你的账号密码，登录进去看看钱有没有少了。
+2.睡眼朦胧的你没看清楚，平时访问的银行网站是www.yinhang.com，而现在访问的是www.yinghang.com，这个钓鱼网站做了什么呢？
+
+```html
+<iframe name="yinhang" src="www.yinhang.com"></iframe>
+// JS
+// 由于没有同源策略的限制，钓鱼网站可以直接拿到别的网站的Dom
+const iframe = window.frames['yinhang']
+const node = iframe.document.getElementById('你输入账号密码的Input')
+console.log(`拿到了这个${node}，我还拿不到你刚刚输入的账号密码吗`)
+```
+
+由此我们知道，同源策略确实能规避一些危险，不是说有了同源策略就安全，只是说同源策略是一种浏览器最基本的安全机制，毕竟能提高一点攻击的成本。其实没有刺不穿的盾，只是攻击的成本和攻击成功后获得的利益成不成正比。
+
+## 跨域正确的打开方式
+
+经过对同源策略的了解，我们应该要消除对浏览器的误解，同源策略是浏览器做的一件好事，是用来防御来自邪门歪道的攻击，但总不能为了不让坏人进门而把全部人都拒之门外吧。没错，我们这种正人君子只要打开方式正确，就应该可以跨域。
+下面将一个个演示正确打开方式，但在此之前，有些准备工作要做。为了本地演示跨域，我们需要：
+1.随便跑起一份前端代码（以下前端是随便跑起来的vue），地址是http://localhost:9099。
+2.随便跑起一份后端代码（以下后端是随便跑起来的node koa2），地址是http://localhost:9971。
+
+### 同源策略限制下接口请求的正确打开方式
+
+**1.JSONP**
+在HTML标签里，一些标签比如script、img这样的获取资源的标签是没有跨域限制的，利用这一点，我们可以这样干：
+
+后端写个小接口
+
+```javascript
+// 处理成功失败返回格式的工具
+const {successBody} = require('../utli')
+class CrossDomain {
+  static async jsonp (ctx) {
+    // 前端传过来的参数
+    const query = ctx.request.query
+    // 设置一个cookies
+    ctx.cookies.set('tokenId', '1')
+    // query.cb是前后端约定的方法名字，其实就是后端返回一个直接执行的方法给前端，由于前端是用script标签发起的请求，所以返回了这个方法后相当于立马执行，并且把要返回的数据放在方法的参数里。
+    ctx.body = `${query.cb}(${JSON.stringify(successBody({msg: query.msg}, 'success'))})`
+  }
+}
+module.exports = CrossDomain
+```
+
+---------------未完成----------------------
+
+
 ## reference
 
 [blog](https://segmentfault.com/a/1190000015597029)
