--- a/1_javascript/一口气了解this,prototype,constructor/3.prototype.md
+++ b/1_javascript/一口气了解this,prototype,constructor/3.prototype.md
@@ -1,5 +1,7 @@
 # prototype由来
 
+[toc]
+
 ## 构造函数模式的困难
 
 构造函数方法很好用，但是存在一个浪费内存的问题。
@@ -73,3 +75,14 @@ Cat.prototype.eat = function(){alert("吃老鼠")};
 这时所有实例的type属性和eat()方法，其实都是同一个内存地址，指向prototype对象，因此就提高了运行效率。
 
 `alert(cat1.eat == cat2.eat); //true`
+
+## prototype 和 this 关系
+
+![17](../../Image/javascript/17.png)
+
+`14行` new 一个function, this 指向为该object:
+
+1. 所以`function`内, 3, 4行都为本object的数值`x`, `y`;
+2. `function`内也可以通过this调用`prototype`的方法
+3. `prototype`内的函数的this也指向该object
+
