--- a/OOD/2_设计电梯系统.md
+++ b/OOD/2_设计电梯系统.md
@@ -73,6 +73,16 @@ corner case:
 
 ![21](../Image/OOD/21.png)
 
+![22](../Image/OOD/22.png)
+
+## 4. class
+
+画UML类图
+
+![23](../Image/OOD/23.png)
+
+具体实例 视频 52:00 开始
+
 ## reference
 
 [video](https://www.youtube.com/watch?v=CsWFuFdlBVU&list=PLNuQtXS21vLWeWbmydW1nbCgT7PkgggHA&index=4)
