--- a/1_javascript/数据结构API/字母数字转换.md
+++ b/1_javascript/数据结构API/字母数字转换.md
@@ -1,13 +1,13 @@
 
 # 字母数字转换
 
-## 字母转换为数字
+## 字母转换为数字位置
 
 ```javascript
 'a'.charAtCode();
 ```
 
-## 数字转为字母
+## 数字转为字母位置
 
 ```javascript
 String.fromCharCode(97) // 为 a;
