--- a/1_javascript/宏任务,微任务.md
+++ b/1_javascript/宏任务,微任务.md
@@ -19,3 +19,7 @@ while(countdonn--) { } // 我们确保这个循环的执行速度会超过定时
 
 ![25](../Image/javascript/32.png)
 ![25](../Image/javascript/33.png)
+
+## reference
+
+[someone's blog](https://www.cnblogs.com/jiasm/p/9482443.html)
