--- a/3_HTML&CSS/CSS相关/盒子模型.md
+++ b/3_HTML&CSS/CSS相关/盒子模型.md
@@ -1,3 +1,4 @@
+#
 
 ## Box Model (盒子模型) -- 块元素
 
@@ -10,7 +11,7 @@
 * padding 内边距 （泡沫）
 * margin 外边距 （盒子外部，盒子与盒子之间的泡沫）， 定义两个不同盒子之间的距离
 
-![1](../Image/CSS/box1.jpeg)
+![1](../../Image/CSS/box1.jpeg)
 
 ### box默认
 
@@ -65,12 +66,12 @@
     margin-bottom - 下外边距，设置一个正值，其下边的元素会向下移动
     margin-left - 左外边距，设置一个正值，元素会向右移动
 
-![](../Image/CSS/margin.png)
+![](../../Image/CSS/margin.png)
 
 ### 水平布局
 
-![2](../Image/CSS/shuipingbuju.png)
-![3](../Image/CSS/shuipingbuju2.png)
+![2](../../Image/CSS/shuipingbuju.png)
+![3](../../Image/CSS/shuipingbuju2.png)
 
 ```text
 元素的水平方向的布局：
