--- a/3_HTML&CSS/CSS相关/选择器.md
+++ b/3_HTML&CSS/CSS相关/选择器.md
@@ -73,7 +73,7 @@ element, a child selector only targets the element’s immediate descendants, or
 
 ## adjacent sibling selector (+)
 
- allows you to target an element that is preceded by another element that shares the same 
+ allows you to target an element that is preceded by another element that shares the same
 parent.
 
 ![10](../../Image/CSS/10.png)
@@ -81,10 +81,27 @@ parent.
 ## General Sibling Selector (~)
 
 ```css
-h2 ~ p { 
- font-size: 1.4em; 
- font-weight: bold; 
- color: #777; 
+h2 ~ p {
+ font-size: 1.4em;
+ font-weight: bold;
+ color: #777;
 }
 ```
 
+## Attribute Selectors
+
+```HTML
+<p>
+    Theterm
+    <abbr title="self-contained underwater breath ing apparatus">
+        SCUBA
+    </abbr>
+    isan acronymratherthananabbreviationasitispronouncedasaword.
+</p>
+```
+
+```css
+abbr[title] {
+ border-bottom: 1px dotted #999;
+}
+```
