--- a/3_HTML&CSS/CSS相关/选择器.md
+++ b/3_HTML&CSS/CSS相关/选择器.md
@@ -105,3 +105,11 @@ abbr[title] {
  border-bottom: 1px dotted #999;
 }
 ```
+
+## The Cascade
+
+### important
+
+![11](../../Image/CSS/11.png)
+
+![12](../../Image/CSS/12.png)
