--- a/3_HTML&CSS/CSS相关/1_基础/选择器.md
+++ b/3_HTML&CSS/CSS相关/1_基础/选择器.md
@@ -50,7 +50,7 @@ div p {
 a descendant selector will select all the descendants of an
 element, a child selector only targets the element’s immediate descendants, or children.
 
-![9](../../Image/CSS/9.png)
+![9](../../../Image/CSS/9.png)
 
 ```css
 #nav > li {
@@ -78,7 +78,7 @@ element, a child selector only targets the element’s immediate descendants, or
  allows you to target an element that is preceded by another element that shares the same
 parent.
 
-![10](../../Image/CSS/10.png)
+![10](../../../Image/CSS/10.png)
 
 ## General Sibling Selector (~)
 
@@ -112,9 +112,9 @@ abbr[title] {
 
 ### important
 
-![11](../../Image/CSS/11.png)
+![11](../../../Image/CSS/11.png)
 
-![12](../../Image/CSS/12.png)
+![12](../../../Image/CSS/12.png)
 
 ## cascade order
 
