--- a/3_HTML&CSS/CSS相关/2_layout/盒子模型(块元素).md
+++ b/3_HTML&CSS/CSS相关/2_layout/盒子模型(块元素).md
@@ -2,6 +2,8 @@
 
 ## Box Model (盒子模型) -- 块元素
 
+盒子模型是用于块元素的
+
 摆放一个元素的位置，放在上面下面或者中间，此时得知道该元素的大小形状。CSS将页面内所有元素都设置为一个矩形的盒子
 
 盒子(电视包装盒)组成：
@@ -11,7 +13,7 @@
 * padding 内边距 （泡沫）
 * margin 外边距 （盒子外部，盒子与盒子之间的泡沫）， 定义两个不同盒子之间的距离
 
-![1](../../Image/CSS/box1.jpeg)
+![1](../../../Image/CSS/box1.jpeg)
 
 ### box默认
 
@@ -19,7 +21,7 @@
 * 默认宽度： 被`content`撑开
 * 内容区范围： 该元素所有的子元素和文本内容
 * width和height设置的不是整个盒子大小，而是内容区大小
-* 盒子的可见框大小是由 content大小 + board大小 + pading大小 共同决定的
+* 盒子的可见框大小是由 content大小 + board大小 + padding大小 共同决定的
 * 元素分为行内元素和块元素，盒子模型为块元素，独占一行
 
 ### border
@@ -66,12 +68,12 @@
     margin-bottom - 下外边距，设置一个正值，其下边的元素会向下移动
     margin-left - 左外边距，设置一个正值，元素会向右移动
 
-![](../../Image/CSS/margin.png)
+![](../../../Image/CSS/margin.png)
 
 ### 水平布局
 
-![2](../../Image/CSS/shuipingbuju.png)
-![3](../../Image/CSS/shuipingbuju2.png)
+![2](../../../Image/CSS/shuipingbuju.png)
+![3](../../../Image/CSS/shuipingbuju2.png)
 
 ```text
 元素的水平方向的布局：
@@ -109,13 +111,13 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
             margin:0 auto;
 ```
 
-![shuipingbuju3](../Image/CSS/shuipingbuju3.png)
-![shuipingbuju3](../Image/CSS/shuipingbuju4.png)
+![shuipingbuju3](../../../Image/CSS/shuipingbuju3.png)
+![shuipingbuju3](../../../Image/CSS/shuipingbuju4.png)
 
 ——————————————
 
-![shuipingbuju3](../Image/CSS/shuipingbuju5.png)
-![shuipingbuju3](../Image/CSS/shuipingbuju6.png)
+![shuipingbuju3](../../../Image/CSS/shuipingbuju5.png)
+![shuipingbuju3](../../../Image/CSS/shuipingbuju6.png)
 
 ### 垂直布局
 
@@ -128,52 +130,55 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
 * 折叠现象：
   * 视频： [link](https://www.youtube.com/watch?v=SkFQz0NuINk&list=PLmOn9nNkQxJFs5KfK5ihVgb8nNccfkgxn&index=51)
   * 两个相邻元素处于垂直方向（相邻，垂直），他们的外边距会重叠。例如一个设置margin-bottom = 100px，一个设置margin-top = 100px他们会重叠为100px
-  * 兄弟元素之间的相邻垂直外边距会取两者之间的较大值（都是正值）。如果都是负值，取绝对值较大的
+  * 兄弟元素之间的相邻垂直外边距会取两者之间的较大值（都是正值）。如果都是负值，取绝对值较大的;如果相邻的外边距一正一负，则取两者的和; 如果相邻的外边距都是负值，则取两者中绝对值较大的
   * 父子元素
     * 父子元素间相邻外边距，子元素的会传递给父元素（上外边距）
     * 父子外边距的折叠会影响到页面的布局，必须要进行处理
 
-## 行内元素
+  ```css
+      <div class="box3">
+        <div class="box4"></div>
+    </div>
+        .box3{
+            width: 200px;
+            height: 200px;
+            background-color: #bfa;
+        }
 
-* 定义： a, br, b, span等元素， 元素分为行内元素和块元素，盒子模型为块元素，独占一行， 行内元素不独占一行
-* 行内元素会在一条直线上排列，在同一行从左至右水平排列。直到一行排不下，才会换行
-* 行内元素设置宽、高、margin上下、padding上下无效（竖直无效）
-* 行内元素设置line-height，margin左右、padding左右有效（水平有效）
-* 行内元素不支持设置宽度和高度, height 和 width无效， 行内元素的宽高随标签里的内容而变化
-例如下图，给a超链接设置长款无用
-* 要想设置宽高只能把行内元素变为块元素，用到`display`
-    inline 将元素设置为行内元素
-    block 将元素设置为块元素
-    inline-block 将元素设置为行内块元素。行内块元素：既可以设置宽度和高度又不会独占一行
-    table 将元素设置为一个表格
-    none 元素不在页面中显示
-  visibility 用来设置元素的显示状态
-    可选值：
-    visible 默认值，元素在页面中正常显示
-    hidden 元素在页面中隐藏 不显示，和display = none的区别为：hidden隐藏，但是依然占据位置， none是不占显示时候的位置
+        .box4{
+            width: 100px;
+            height: 100px;
+            background-color: orange;
+            margin-top: 100px;
+        }
 
-![2](../Image/CSS/hangneiyuansu1.png)
-![3](../Image/CSS/hangneiyuansu2.png)
+  ```
 
-## 默认样式
+一开始子元素无margin-top:
+![13](../../../Image/CSS/13.png)
+`-> 加上margin-top: 100px后 ->`
+![14](../../../Image/CSS/14.png)
+父元素也跟子元素一起magin-top变为了100, 父子元素间相邻外边距，子元素的会传递给父元素（上外边距）但是我们只想移动子元素, 达到下面图的效果
+![15](../../../Image/CSS/15.png)
+可以通过增加padding-top和减少height, 而不用margin-top
 
-* 通常情况，浏览器都会为元素设置一些默认样式
-* 默认样式的存在会影响到页面的布局，通常情况下编写网页时必须要去除浏览器的默认样式（PC端的页面）
-* 通常去除默认的margin, padding:
-* {
-    padding: 0;
-    margin: 0;
-}
+  ```css
+      <div class="box3">
+        <div class="box4"></div>
+    </div>
+        .box3{
+            width: 200px;
+            height: 100px;
+            padding-top: 100px;
+            background-color: #bfa;
+        }
 
-## span和div
-
-div默认为block，每一个单独占一行； span的默认样式为inline
-
-![1](../Image/CSS/1.png)
-
-![2](../Image/CSS/2.png)
-
-![3](../Image/CSS/3.png)
+        .box4{
+            width: 100px;
+            height: 100px;
+            background-color: orange;
+        }
+  ```
 
 ## [CSS居中的几种方式](https://segmentfault.com/a/1190000013966650)
 
