--- a/3_HTML&CSS/CSS相关/1_基础/伪类选择器.md
+++ b/3_HTML&CSS/CSS相关/1_基础/伪类选择器.md
@@ -1,6 +1,6 @@
 # 伪类选择器
 
-伪类（不存在的类，特殊的类）
+## 伪类（不存在的类，特殊的类）
 
 - 伪类用来描述一个元素的特殊状态
     比如：第一个子元素、被点击的元素、鼠标移入的元素...
@@ -63,4 +63,33 @@
         <li>第五个</li>
     </ul>
 </body>
+```
+
+## 超链接a元素的伪类
+
+```html
+
+:link 用来表示没访问过的链接（正常的链接）
+a:link{
+    color: red;
+}
+
+:visited 用来表示访问过的链接
+由于隐私的原因，所以visited这个伪类只能修改链接的颜色
+a:visited{
+    color: orange;
+}
+
+
+:hover 用来表示鼠标移入的状态
+a:hover{
+    color: aqua;
+    font-size: 50px;
+}
+
+
+:active 用来表示鼠标点击
+a:active{
+    color: yellowgreen;
+}
 ```
