--- a/3_HTML&CSS/CSS相关/2_layout/盒子模型(块元素).md
+++ b/3_HTML&CSS/CSS相关/2_layout/盒子模型(块元素).md
@@ -17,11 +17,11 @@
 
 ### box默认
 
-* 默认高度： 100%
-* 默认宽度： 被`content`撑开
+* 默认宽度： 100%, 父元素多宽, 他就多宽
+* 默认高度： 被`content`撑开
 * 内容区范围： 该元素所有的子元素和文本内容
 * width和height设置的不是整个盒子大小，而是内容区大小
-* 盒子的可见框大小是由 content大小 + board大小 + padding大小 共同决定的
+* 盒子的**可见框**大小是由 content大小 + board大小 + padding大小 共同决定的
 * 元素分为行内元素和块元素，盒子模型为块元素，独占一行
 
 ### border
@@ -179,27 +179,3 @@ margin-left + border-left + padding-left + width + padding-right + border-right 
             background-color: orange;
         }
   ```
-
-## [CSS居中的几种方式](https://segmentfault.com/a/1190000013966650)
-
-## float
-
-通过浮动可以使一个元素向其父元素的左侧或右侧移动
-
-可选值：
-    none 默认值 ，元素不浮动
-    left 元素向左浮动
-    right 元素向右浮动
-
-注意，元素设置浮动以后，水平布局的等式(块元素独占一行，外边距等自动填充)便不再生效
-元素设置浮动以后，会完全从文档流中脱离，不再占用文档流的位置，所以元素下边的还在文档流中的元素会自动向上移动
-
-浮动的特点：
-  1、浮动元素会完全脱离文档流，不再占据文档流中的位置
-  2、设置浮动以后元素会向父元素的左侧或右侧移动，
-  3、浮动元素默认不会从父元素中移出
-  4、浮动元素向左或向右移动时，不会超过它前边的其他浮动元素
-  5、如果浮动元素的上边是一个没有浮动的块元素，则浮动元素无法上移
-  6、浮动元素不会超过它上边的浮动的兄弟元素，最多最多就是和它一样高
-
-简单总结：浮动目前来讲它的主要作用就是让页面中的元素可以水平排列，通过浮动可以制作一些水平方向的布局
