--- a/3_HTML&CSS/CSS相关/2_layout/行内元素.md
+++ b/3_HTML&CSS/CSS相关/2_layout/行内元素.md
@@ -2,10 +2,10 @@
 
 * 定义： a, br, b, span等元素， 元素分为行内元素和块元素，盒子模型为块元素，独占一行， 行内元素不独占一行
 * 行内元素会在一条直线上排列，在同一行从左至右水平排列。直到一行排不下，才会换行
-* 行内元素设置宽、高、margin上下、padding上下无效（竖直无效）
+* 行内元素设置宽、高、margin上下、padding上下无效（竖直不会影响布局）(不太懂啥意思)
 * 行内元素设置line-height、margin左右、padding左右有效（水平有效）
 * 行内元素不支持设置宽度和高度, height 和 width无效， 行内元素的宽高随标签里的内容而变化
-例如下图，给a超链接设置长款无用
+例如下图，给a超链接设置长宽无用
 * 要想设置宽高只能把行内元素变为块元素，用到`display`
     inline 将元素设置为行内元素
     block 将元素设置为块元素
@@ -19,15 +19,6 @@
 
 ![2](../../../Image/CSS/hangneiyuansu1.png)
 ![3](../../../Image/CSS/hangneiyuansu2.png)
-
-## inline-block/block/inline
-
-block会独占一行
-inline-block不会独占一行, 但是可以设置margin, padding, 和长宽
-inline不会独占一行, 长宽无效, 但是margin左右和padding左右有效
-![16](../../../Image/CSS/16.png)
-![17](../../../Image/CSS/17.png)
-
 
 ## span和div
 
