--- a/6_设计模式/单例模式.md
+++ b/6_设计模式/单例模式.md
@@ -90,10 +90,47 @@ Singleton.getInstance = (function(){
 })();
 ```
 
-## [java 单例模式](https://www.runoob.com/design-pattern/singleton-pattern.html) --详情见网页
+## java 单例模式 [link1](https://www.runoob.com/design-pattern/singleton-pattern.html) [link2](https://www.liaoxuefeng.com/wiki/1252599548343744/1281319214514210) --详情见网页
 
-分为懒汉和饿汉方式. 懒汉就是在需要的时候,第一次调用才会new实例出来. 饿汉是家在这个类的时候就会new实例出来
+为了避免他人用`new`的方式来生成类的实例, 需要将单例的构造方法constructor必须是private，这样就防止了调用方自己创建实例，但是在类的内部，是可以用一个静态字段来引用唯一创建的实例的：
+
+```java
+public class Singleton {
+    // 静态字段引用唯一实例:
+    private static final Singleton INSTANCE = new Singleton();
+
+    // private构造方法保证外部无法实例化:
+    private Singleton() {
+    }
+}
+```
+
+那么问题来了，外部调用方如何获得这个唯一实例？
+答案是提供一个静态方法，直接返回实例：
+
+```java
+public class Singleton {
+    // 静态字段引用唯一实例:
+    public static final Singleton INSTANCE = new Singleton();
+
+    // private构造方法保证外部无法实例化:
+    private Singleton() {
+    }
+}
+```
+
+所以，单例模式的实现方式很简单：
+
+* 只有private构造方法，确保外部无法实例化；
+* 通过private static变量持有唯一实例，保证全局唯一性；
+* 通过public static方法返回此唯一实例，使外部调用方能获取到实例。
+
+![3](../Image/Design_Patterns/3.png)
+![3](../Image/Design_Patterns/4.png)
+
 
 ## reference
 
 << JavaScript 设计模式和开发实践>>
+[link1](https://www.runoob.com/design-pattern/singleton-pattern.html)
+[link2](https://www.liaoxuefeng.com/wiki/1252599548343744/1281319214514210)
