--- a/1_javascript/计时器/宏任务,微任务.md
+++ b/1_javascript/计时器/宏任务,微任务.md
@@ -2,6 +2,13 @@
 
 ![25](../../Image/javascript/25.png)
 ![25](../../Image/javascript/26.png)
+上面打码输出结果:
+![59](../../Image/javascript/59.png)
+
+所以根据上面总结:
+每个层级的宏任务,都对应了他们的微任务队列,微任务队列遵循先进先出的原则,当全局同步代码执行完毕后,就开始执行第一层的任务。同层级的微任务永远先于宏任务执行,并且会在当前层级宏任务结束前全部执行完毕
+![25](../../Image/javascript/60.png)
+
 ![25](../../Image/javascript/27.png)
 ![25](../../Image/javascript/28.png)
 ![25](../../Image/javascript/29.png)
@@ -23,3 +30,4 @@ while(countdonn--) { } // 我们确保这个循环的执行速度会超过定时
 ## reference
 
 [someone's blog](https://www.cnblogs.com/jiasm/p/9482443.html)
+[someone's blog](https://segmentfault.com/a/1190000039055443)
