--- a/3_HTML&CSS/CSS相关/float/高度塌陷.md
+++ b/3_HTML&CSS/CSS相关/float/高度塌陷.md
@@ -1,7 +1,7 @@
 # [float的高度塌陷问题](https://www.youtube.com/watch?v=Pc-RhCPCcD4&list=PLmOn9nNkQxJFs5KfK5ihVgb8nNccfkgxn&index=64)
 
 一般在html结构中, 父元素不设置高度, 而是由子元素的高度撑起来父元素.
-但是如果将子元素设置了float, 它吧便脱离了父元素, 无法将未设置高度的父元素撑开.
+但是如果将子元素设置了float, 它便脱离了父元素, 无法将未设置高度的父元素撑开.
 ![38](../../../Image/CSS/38.png)
 
 如何解决这个问题?
