--- a/3_HTML&CSS/CSS相关/flex/1_ 弹性盒子概念.md
+++ b/3_HTML&CSS/CSS相关/flex/1_ 弹性盒子概念.md
@@ -1,22 +1,12 @@
 [toc]
 
-## 继承
-
-为一个元素设计样式，同时其后代元素会继承。
-
-```html
-<p>
-    <span>对p进行样式设置，span会继承</span>
-</p>
-```
-
-但是，有些样式不能被继承：背景相关，布局相关等
+为了解决float导致的高度塌陷等问题, 引入的新的方法`flex`. 它主要用来代替浮动来完成页面的布局
 
 ## flex弹性盒子
 
 定义：是CSS中的又一种布局手段，它主要用来代替浮动来完成页面的布局； flex可以使元素具有弹性，让元素可以跟随页面的大小的改变而改变。
 
-样式分为两类，一个是给弹性容器设置的，一个是给弹性元素设置的
+样式分为两类，一个是给`弹性容器`设置的，一个是给`弹性元素`设置的
 
 ### 弹性容器
 
@@ -38,4 +28,3 @@ display:inline-flex 设置为行内的弹性容器，该设置元素自己不独
 ```
 
 弹性元素可以同时是弹性容器；例如上面可以给li设置flex，这时候li就是弹性容器，又是ul的弹性元素
-
