--- a/1_javascript/一口气了解this,prototype,constructor/4.箭头函数.md
+++ b/1_javascript/一口气了解this,prototype,constructor/4.箭头函数.md
@@ -1,1 +1,37 @@
 # arrow function 箭头函数
+
+箭头函数相当于匿名函数,但和匿名函数的区别在于this
+
+![63](../../Image/javascript/63.png)
+![64](../../Image/javascript/64.png)
+![65](../../Image/javascript/65.png)
+
+```JavaScript
+function defer(f, ms) {
+  return function() {
+    setTimeout(() => f.apply(this, arguments), ms);
+  };
+}
+
+function sayHi(who) {
+  alert('Hello, ' + who);
+}
+
+let sayHiDeferred = defer(sayHi, 2000);
+sayHiDeferred("John"); // 2 秒后显示：Hello, John
+```
+
+不用箭头函数的话，可以这么写：
+
+```JavaScript
+function defer(f, ms) {
+  return function(...args) {
+    let ctx = this;
+    setTimeout(function() {
+      return f.apply(ctx, args);
+    }, ms);
+  };
+}
+```
+
+![66](../../Image/javascript/66.png)
