隐式类型转换

--- a/1_javascript/隐式类型转换.md
+++ b/1_javascript/隐式类型转换.md
@@ -1,5 +1,11 @@
 # 隐式转型
 
+## +号类型转换
+
+三条准则
+![70](../Image/javascript/70.png)
+
+
 ## reference
 
 [blog](https://chinese.freecodecamp.org/news/javascript-implicit-type-conversion/)
