--- a/1_javascript/prototype/2_显式原型和隐式原型.md
+++ b/1_javascript/prototype/2_显式原型和隐式原型.md
@@ -29,8 +29,8 @@ var fn = new Fn()时候, 编译器进行了如下操作:
 fn.__proto__ = Fn.prototype
 ```
 
-1. 内存结构(图)
-2. 总结:
-  * 函数的prototype属性: 在定义函数时自动添加的, 默认值是一个空Object对象
-  * 对象的__proto__属性: 创建对象时自动添加的, 默认值为构造函数的prototype属性值
-  * 程序员能直接操作显式原型, 但不能直接操作隐式原型(ES6之前)
+## 总结
+
+* 函数的prototype属性: 在定义函数时自动添加的, 默认值是一个空Object对象
+* 对象的__proto__属性: 创建实例对象时自动添加的, 默认值为构造函数的prototype属性值
+* 程序员能直接操作显式原型, 但不能直接操作隐式原型(ES6之前)
