--- a/9_Database/数据库和缓存如何保证一致性.md
+++ b/9_Database/数据库和缓存如何保证一致性.md
@@ -11,3 +11,7 @@
 ![](../Image/Piecemeal_Knowledge/26.png)
 ![](../Image/Piecemeal_Knowledge/27.png)
 ![](../Image/Piecemeal_Knowledge/28.png)
+
+reference
+
+[xiaolin blog](https://mp.weixin.qq.com/s/sh-pEcDd9l5xFHIEN87sDA)
