--- a/9_Database/数据库和缓存如何保证一致性.md
+++ b/9_Database/数据库和缓存如何保证一致性.md
@@ -1,16 +1,16 @@
 # 数据库和缓存如何保证一致性？
 
-![](../Image/Piecemeal_Knowledge/18.png)
-![](../Image/Piecemeal_Knowledge/19.png)
-![](../Image/Piecemeal_Knowledge/20.png)
-![](../Image/Piecemeal_Knowledge/21.png)
-![](../Image/Piecemeal_Knowledge/22.png)
-![](../Image/Piecemeal_Knowledge/23.png)
-![](../Image/Piecemeal_Knowledge/24.png)
-![](../Image/Piecemeal_Knowledge/25.png)
-![](../Image/Piecemeal_Knowledge/26.png)
-![](../Image/Piecemeal_Knowledge/27.png)
-![](../Image/Piecemeal_Knowledge/28.png)
+![18](../Image/Piecemeal_Knowledge/18.png)
+![19](../Image/Piecemeal_Knowledge/19.png)
+![20](../Image/Piecemeal_Knowledge/20.png)
+![21](../Image/Piecemeal_Knowledge/21.png)
+![22](../Image/Piecemeal_Knowledge/22.png)
+![23](../Image/Piecemeal_Knowledge/23.png)
+![24](../Image/Piecemeal_Knowledge/24.png)
+![25](../Image/Piecemeal_Knowledge/25.png)
+![26](../Image/Piecemeal_Knowledge/26.png)
+![27](../Image/Piecemeal_Knowledge/27.png)
+![28](../Image/Piecemeal_Knowledge/28.png)
 
 reference
 
