master and slaves in redis

--- a/9_Database/redis/主从一致.md
+++ b/9_Database/redis/主从一致.md
@@ -6,7 +6,7 @@
 
 ## 主从增量同步
 
-主从完成第一次同步后, 会建立TCP长连接, 之后主服务器会将自己的写操作发送给从服务器, 从服务器会执行这些写操作, 从而保持数据一致.
+主从完成第一次同步后, 会建立TCP长连接, 之后主服务器会将自己的写操作写到内部缓冲区, 然后异步发送给从服务器, 从服务器会执行这些写操作, 从而保持数据一致.
 
 ## 增量复制
 
@@ -21,3 +21,27 @@
     如果判断出从服务器要读取的数据还在 repl_backlog_buffer 缓冲区里，那么主服务器将采用增量同步的方式；
     相反，如果判断出从服务器要读取的数据已经不存在 repl_backlog_buffer 缓冲区里，那么主服务器将采用全量同步的方式。
 具体操作链接[link](https://www.xiaolincoding.com/redis/cluster/master_slave_replication.html#%E5%A2%9E%E9%87%8F%E5%A4%8D%E5%88%B6)
+
+## 主从数据一致性问题
+
+之所以会出现主从数据不一致的现象，是因为主从节点间的命令复制是异步进行的，所以无法实现强一致性保证（主从数据时时刻刻保持一致）。
+
+如何应对主从数据不一致？
+![92](/Image/database/92.png)
+
+## 主从切换导致数据丢失怎么办
+
+主从切换过程中，产生数据丢失的情况有两种：
+
+1. 异步复制同步丢失
+2. 集群产生脑裂数据丢失
+
+### 异步复制
+
+主服务器给从服务器发送数据同步时候, 导致断电了, 从服务就数据丢失. redis配置里面有个参数, `min-slaves-max-lag`, 假设设为10s, 表示要是主服务器和从服务器的数据同步超过10s, 主服务器就不再接受新的写入信息, 保证主从数据只差了10s. 接着我们可以蚕蛹降级措施, 将数据暂时写入本地缓存和磁盘中，在一段时间（等 master 恢复正常）后重新写入 master 来保证数据不丢失，也可以将数据写入 kafka 消息队列，等 master 恢复正常，再隔一段时间去消费 kafka 中的数据，让将数据重新写入 master
+
+### 集群脑裂
+
+由于网络问题，集群节点之间失去联系。主从数据不同步；重新平衡选举，产生两个主服务。等网络恢复，旧主节点会降级为从节点，再与新主节点进行同步复制的时候，由于会从节点会清空自己的缓冲区，所以导致之前客户端写入的数据丢失了。
+
+让master不能接受写入新数据: 具体[link](https://www.xiaolincoding.com/redis/cluster/master_slave_replication.html#%E4%B8%BB%E4%BB%8E%E5%88%87%E6%8D%A2%E5%A6%82%E4%BD%95%E5%87%8F%E5%B0%91%E6%95%B0%E6%8D%AE%E4%B8%A2%E5%A4%B1)
