--- a/Database/redis/数据库和缓存如何保证一致性.md
+++ b/Database/redis/数据库和缓存如何保证一致性.md
@@ -54,17 +54,17 @@
 
 ## 详细
 
-![18](../Image/Piecemeal_Knowledge/18.png)
-![19](../Image/Piecemeal_Knowledge/19.png)
-![20](../Image/Piecemeal_Knowledge/20.png)
-![21](../Image/Piecemeal_Knowledge/21.png)
-![22](../Image/Piecemeal_Knowledge/22.png)
-![23](../Image/Piecemeal_Knowledge/23.png)
-![24](../Image/Piecemeal_Knowledge/24.png)
-![25](../Image/Piecemeal_Knowledge/25.png)
-![26](../Image/Piecemeal_Knowledge/26.png)
-![27](../Image/Piecemeal_Knowledge/27.png)
-![28](../Image/Piecemeal_Knowledge/28.png)
+![18](/Image/Piecemeal_Knowledge/18.png)
+![19](/Image/Piecemeal_Knowledge/19.png)
+![20](/Image/Piecemeal_Knowledge/20.png)
+![21](/Image/Piecemeal_Knowledge/21.png)
+![22](/Image/Piecemeal_Knowledge/22.png)
+![23](/Image/Piecemeal_Knowledge/23.png)
+![24](/Image/Piecemeal_Knowledge/24.png)
+![25](/Image/Piecemeal_Knowledge/25.png)
+![26](/Image/Piecemeal_Knowledge/26.png)
+![27](/Image/Piecemeal_Knowledge/27.png)
+![28](/Image/Piecemeal_Knowledge/28.png)
 
 ## reference
 
