--- a/system_design系统设计/分布式锁.md
+++ b/system_design系统设计/分布式锁.md
@@ -3,6 +3,21 @@
 * 基于MySQL实现
 * 基于redis实现
 
+## 基于MySQL
+
+为了防止幻读, 通过`select for update`锁这行数据, 然后将查询和插入放在一个事务中.
+
+但是会出现问题, 基于mysql实现的分布式锁, 线程A拿到数据1上锁, 然后又需要数据2,  但是线程B先拿到数据2上锁, 然后等待数据1释放, 互相死锁. 为什么redis没这种情况, 因为redis是单线程的, 一个线程只能执行一个命令, 所以不会出现这种情况. mysql如果想这样, 就得利用串行化隔离级别, 会很慢.
+
+可以通过乐观锁解决, 基于乐观锁就是避免长时间持有锁, 以此解决死锁问题, 乐观锁的实现方式:
+
+乐观锁就是在添加一个版本号,在基于版本号的乐观锁策略中，锁的持有实际上是在数据被最终提交到数据库的瞬间。这是因为乐观锁的操作通常包括：
+
+读取数据时获取当前版本号：这一步不涉及任何锁定操作。
+执行业务逻辑：在这个阶段，数据未被锁定，其他线程或进程可以自由读取相同的数据和版本号。
+更新数据时比对版本号：只有在提交更新的瞬间，才会检查版本号是否仍然是预期值。如果是，则更新操作成功；如果不是，说明其他进程已经修改了数据，当前操作会被拒绝。
+因此，没有长时间的锁持有阶段，这就减少了锁资源的占用时间，从而降低了发生死锁的概率。
+
 ## 基于redis
 
 可以用`setnx`, `setnx`意思是set if not exists, 也就是只有在key不存在的时候才能set成功, 这个操作是原子的, 所以可以用来实现分布式锁.
@@ -58,7 +73,9 @@ return false;
 
 ### SET的扩展命令（SET EX PX NX）
 
-保证SETNX + EXPIRE两条指令的原子性，我们可以巧用Redis的SET指令扩展参数！（`SET key value[EX seconds][PX milliseconds][NX|XX]`）
+保证SETNX + EXPIRE两条指令的原子性，我们可以巧用Redis的SET指令扩展参数！（`SET key value[EX seconds][PX milliseconds][NX|XX]`） 或 `lua脚本`, redis执行`lua脚本`是原子性的。
+
+这里讲下`SET`的扩展参数：
 
 ```shell
 SET key value[EX seconds][PX milliseconds][NX|XX]
@@ -69,7 +86,7 @@ PX milliseconds: 设定key的过期时间，单位为毫秒
 XX: 仅当key存在时设置值
 ```
 
-但是呢，这个方案还是可能存在问题：
+但是呢，这个方案还是可能存在问题：如何设置过期时间?
 
 问题一：锁过期释放了，业务还没执行完。假设线程a获取锁成功，一直在执行临界区的代码。但是100s过去后，它还没执行完。但是，这时候锁已经过期了，此时线程b又请求过来。显然线程b就可以获得锁成功，也开始执行临界区的代码。那么问题就来了，临界区的业务代码都不是严格串行执行的啦。
 
@@ -94,6 +111,8 @@ if（jedis.set(key_resource_id, uni_request_id, "NX", "EX", 100s) == 1）{ //加
 }
 ```
 
+但是呢，这个方案还是可能存在问题：如何设置过期时间?
+
 ### 守护进程
 
 上述方案仍然存在`锁过期释放，业务没执行完的问题`, 是否可以给获得锁的线程，开启一个定时守护线程，每隔一段时间检查锁是否还存在，存在则对锁的`过期时间延长`，防止锁过期提前释放。
@@ -102,7 +121,7 @@ if（jedis.set(key_resource_id, uni_request_id, "NX", "EX", 100s) == 1）{ //加
 
 只要线程一加锁成功，就会启动一个watch dog看门狗，它是一个后台线程，会每隔10秒检查一下，如果线程1还持有锁，那么就会不断的延长锁key的生存时间
 
-### 多机实现的分布式锁
+### 多机实现的分布式锁 redlock
 
 前面方案都只是基于单机版的讨论
 
@@ -114,3 +133,5 @@ if（jedis.set(key_resource_id, uni_request_id, "NX", "EX", 100s) == 1）{ //加
 [link](https://juejin.cn/post/7069041255438630919)
 
 [link](https://cloud.tencent.com/developer/article/2180530)
+
+[video](https://www.bilibili.com/video/BV1R34y1Z7dG?p=7&vd_source=876f070b226adc2dd07033543abb6c67)
