--- a/Operating_System操作系统/软连接硬链接.md
+++ b/Operating_System操作系统/软连接硬链接.md
@@ -21,7 +21,7 @@
 * 软链接失效时一般是白字红底闪烁；
 * 创建软链接命令 ln -s 源文件 软链接文件；
 * 软链接和源文件是不同的文件，文件类型也不同，inode号也不同；
-* 软链接的文件类型是“l”，可以用rm删除。
+* 软链接的文件类型是`l`，可以用rm删除。
 
 ## 硬链接和软链接的区别
 
