--- a/Database/redis/主从一致.md
+++ b/Database/redis/主从一致.md
@@ -1,8 +1,8 @@
 # master VS slave
 
-## 主从第一次复制的过程
+## 主从第一次同步
 
-第一次复制时候, 先通过命令行选一个主服务器, 之后从服务器会和主服务器建立连接, 然后主服务器将`RDB`文件发送给从服务器进行备份. 这期间主服务器产生的新数据, 会被写到主服务器的`replication buffer`缓冲器. 在主服务器生成的 RDB 文件发送完，从服务器收到 RDB 文件后，丢弃所有旧数据，将 RDB 数据载入到内存。完成 RDB 的载入后，会回复一个确认消息给主服务器。接着，主服务器将 replication buffer 缓冲区里所记录的写操作命令发送给从服务器，从服务器执行来自主服务器 replication buffer 缓冲区里发来的命令，这时主从服务器的数据就一致了。
+第一次复制时候, 先通过命令行选一个主服务器, 之后从服务器会和主服务器建立连接, 主服务器会执行`bgsave`命令, 将`RDB`文件发送给从服务器进行备份. 这期间主服务器产生的新数据, 会被写到主服务器的`replication buffer`缓冲器. 在主服务器生成的 RDB 文件发送完，从服务器收到 RDB 文件后，丢弃所有旧数据，将 RDB 数据载入到内存。完成 RDB 的载入后，会回复一个确认消息给主服务器。接着，主服务器将 replication buffer 缓冲区里所记录的写操作命令发送给从服务器，从服务器执行来自主服务器 replication buffer 缓冲区里发来的命令，这时主从服务器的数据就一致了。
 
 ## 主从增量同步
 
@@ -43,5 +43,11 @@
 ### 集群脑裂
 
 由于网络问题，集群节点之间失去联系。主从数据不同步；重新平衡选举，产生两个主服务。等网络恢复，旧主节点会降级为从节点，再与新主节点进行同步复制的时候，由于会从节点会清空自己的缓冲区，所以导致之前客户端写入的数据丢失了。
+
+解决方案, redis提供了两个方案:
+
+`min-slaves-to-write x`，主节点必须要有至少 x 个从节点连接，如果小于这个数，主节点会禁止写数据。
+`min-slaves-max-lag x`，主从数据复制和同步的延迟不能超过 x 秒，如果主从同步的延迟超过 x 秒，主节点会禁止写数据。
+这两个配置项组合后的要求是，主节点连接的从节点中至少有 N 个从节点，「并且」主节点进行数据复制时的 ACK 消息延迟不能超过 T 秒，否则，主节点就不会再接收客户端的写请求了。
 
 让master不能接受写入新数据: 具体[link](https://www.xiaolincoding.com/redis/cluster/master_slave_replication.html#%E4%B8%BB%E4%BB%8E%E5%88%87%E6%8D%A2%E5%A6%82%E4%BD%95%E5%87%8F%E5%B0%91%E6%95%B0%E6%8D%AE%E4%B8%A2%E5%A4%B1)
