redo undo binlog

--- a/Database/redis/数据库和缓存如何保证一致性.md
+++ b/Database/redis/数据库和缓存如何保证一致性.md
@@ -17,7 +17,7 @@
 
 ### 先更新数据库, 再更新缓存
 
-情况: 线程1更新了数据库, 然后线程2更新了缓存, 更新了数据库, 再之后线程1更新了缓存, 这样就造成了缓存和数据库不一致.
+情况: 线程1更新了数据库, 此时线程2更新了数据库, 然后先更新了缓存, 再之后线程1更新了缓存, 这样就造成了缓存和数据库不一致.
 
 所以更新缓存的策略下, 当两个请求并发更新同一条数据的时候，可能会出现缓存和数据库中的数据不一致的现象。
 
@@ -27,6 +27,17 @@
 这种情况很有可能发生, 因为修改disk的时间远比修改内存的时间长, 所以线程1没修改完disk的数据, 线程2就已经完成了.
 
 解决办法: 线程1修改完数据库数据后, 再更新一下redis数据. 这样只会造成线程2读取到了老数据仅仅一次, 之后就是新数据了. 这种方法叫**双删**， 因为删除了缓存两次。 第二次删除缓存要用到**延迟双删**， 也就是线程1更新完数据库后， 等待一段时间再删除缓存, 因为要是抢在线程2对redis进行写操作前删除， 那么线程2就会更新老数据到redis中， 删除了个寂寞。
+
+```shell
+#删除缓存
+redis.delKey(X)
+#更新数据库
+db.update(X)
+#睡眠
+Thread.sleep(N)
+#再删除缓存
+redis.delKey(X)
+```
 
 这种方法可以保证**最终一致性**，但是, 遇到强一致性的场景, 因为有读到老数据的可能性, 所以不适用, 解决办法就是线程1给redis加锁, 保证只有一个线程能够操作读取redis， 这会造成性能问题. 也就是CAP理论中的CP和AP只能取一个。
 
