--- a/Database/redis/主从一致.md
+++ b/Database/redis/主从一致.md
@@ -1,6 +1,6 @@
 # master VS slave
 
-## 主从第一次同步
+## 主从第一次同步/全量复制
 
 第一次复制时候, 先通过命令行选一个主服务器, 之后从服务器会和主服务器建立连接, 主服务器会执行`bgsave`命令, 将`RDB`文件发送给从服务器进行备份. 这期间主服务器产生的新数据, 会被写到主服务器的`replication buffer`缓冲器. 在主服务器生成的 RDB 文件发送完，从服务器收到 RDB 文件后，丢弃所有旧数据，将 RDB 数据载入到内存。完成 RDB 的载入后，会回复一个确认消息给主服务器。接着，主服务器将 replication buffer 缓冲区里所记录的写操作命令发送给从服务器，从服务器执行来自主服务器 replication buffer 缓冲区里发来的命令，这时主从服务器的数据就一致了。
 
